Call files.writeString and readString methods inline.